[package]
name = "dlchunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.85"
base64 = "0.13.0"
clap = { version = "4.0.14", features = ["derive"] }
lazy_static = "1.4.0"
